--- a/index.html
+++ b/index.html
@@ -344,8 +344,7 @@
     <footer>
         <p>Connect with me: 
             <a href="https://www.instagram.com/senseinsem" target="_blank">Instagram</a> | 
-            <a href="https://www.tiktok.com/@senseinsem" target="_blank">TikTok</a> |
-            <a href="https://discord.gg/hzGdXXtx" target="_blank">Discord</a>
+            <a href="https://www.tiktok.com/@senseinsem" target="_blank">TikTok</a>
         </p>
         <p>&copy; 2025 SENSEI</p>
     </footer>
@@ -354,3 +353,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
