--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="lightmode">
 
-        <!-- Loading Screen -->
+    <!-- Loading Screen -->
     <div id="loading-screen">
         <div class="loading-text">better with darkmode</div>
         <div class="bouncing-balls">
@@ -36,7 +36,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#education">Education</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#faq">FAQ</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -78,60 +78,59 @@
         </article>
     </section>
 
-<!-- Schools / University Section -->
-<section id="schools">
-    <article>
-        <h2>Schools & University</h2>
-        <div class="schools-grid">
-            <!-- SMK Card -->
-            <div class="school-card" data-bg="education/smkbuilding.png" onclick="openPopup('smkPopup')">
-                <img src="education/smkbg.png" alt="SMK Bukit Garam Logo" class="school-logo">
-                <h3>SMK Bukit Garam, Sabah</h3>
-            </div>
+    <!-- Schools / University Section -->
+    <section id="schools">
+        <article>
+            <h2>Schools & University</h2>
+            <div class="schools-grid">
+                <!-- SMK Card -->
+                <div class="school-card" data-bg="education/smkbuilding.png" onclick="openPopup('smkPopup')">
+                    <img src="education/smkbg.png" alt="SMK Bukit Garam Logo" class="school-logo">
+                    <h3>SMK Bukit Garam, Sabah</h3>
+                </div>
 
-            <!-- UTeM Card -->
-            <div class="school-card" data-bg="education/ubuilding.png" onclick="openPopup('utemPopup')">
-                <img src="education/utem.png" alt="UTeM Logo" class="school-logo">
-                <h3>Technical University of Malaysia, Melaka</h3>
+                <!-- UTeM Card -->
+                <div class="school-card" data-bg="education/ubuilding.png" onclick="openPopup('utemPopup')">
+                    <img src="education/utem.png" alt="UTeM Logo" class="school-logo">
+                    <h3>Technical University of Malaysia, Melaka</h3>
+                </div>
             </div>
-        </div>
-    </article>
-</section>
+        </article>
+    </section>
 
-<!-- SMK Popup -->
-<div id="smkPopup" class="popup">
-    <div class="popup-content">
-        <span class="close" onclick="closePopup('smkPopup')">&times;</span>
-        <h2>Capture Moments</h2>
-        <div class="popup-grid">
-            <div class="popup-card"><img src="education/smk/alex.png" alt="SMK Photo 1"><p>Photo 1</p></div>
-            <div class="popup-card"><img src="education/smk/1.png" alt="SMK Photo 2"><p>Photo 2</p></div>
-            <div class="popup-card"><img src="education/smk/2.png" alt="SMK Photo 3"><p>Photo 3</p></div>
-            <div class="popup-card"><img src="education/smk/3.png" alt="SMK Photo 3"><p>Photo 4</p></div>
-            <div class="popup-card"><img src="education/smk/4.png" alt="SMK Photo 3"><p>Photo 5</p></div>
-            <div class="popup-card"><img src="education/smk/5.png" alt="SMK Photo 3"><p>Photo 6</p></div>
+    <!-- SMK Popup -->
+    <div id="smkPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup('smkPopup')">&times;</span>
+            <h2>Capture Moments</h2>
+            <div class="popup-grid">
+                <div class="popup-card"><img src="education/smk/alex.png" alt="SMK Photo 1"><p>Photo 1</p></div>
+                <div class="popup-card"><img src="education/smk/1.png" alt="SMK Photo 2"><p>6A3</p></div>
+                <div class="popup-card"><img src="education/smk/2.png" alt="SMK Photo 3"><p>6A3</p></div>
+                <div class="popup-card"><img src="education/smk/3.png" alt="SMK Photo 3"><p>6A3</p></div>
+                <div class="popup-card"><img src="education/smk/4.png" alt="SMK Photo 3"><p>F6 Last Day</p></div>
+                <div class="popup-card"><img src="education/smk/5.png" alt="SMK Photo 3"><p>Shoot Film</p></div>
+            </div>
         </div>
     </div>
-</div>
 
-<!-- UTeM Popup -->
-<div id="utemPopup" class="popup">
-    <div class="popup-content">
-        <span class="close" onclick="closePopup('utemPopup')">&times;</span>
-        <h2>Capture Moments</h2>
-        <div class="popup-grid">
-            <div class="popup-card"><img src="education/utem/1.png" alt="UTeM Photo 1"><p>Photo 1</p></div>
-            <div class="popup-card"><img src="education/utem/2.png" alt="UTeM Photo 2"><p>Photo 2</p></div>
-            <div class="popup-card"><img src="education/utem/3.png" alt="UTeM Photo 3"><p>Photo 3</p></div>
-            <div class="popup-card"><img src="education/utem/4.png" alt="UTeM Photo 4"><p>Photo 4</p></div>
-            <div class="popup-card"><img src="education/utem/5.png" alt="UTeM Photo 5"><p>Photo 5</p></div>
-            <div class="popup-card"><img src="education/utem/6.png" alt="UTeM Photo 6"><p>Photo 6</p></div>
-            <div class="popup-card"><img src="education/utem/7.png" alt="UTeM Photo 7"><p>Photo 7</p></div>
+    <!-- UTeM Popup -->
+    <div id="utemPopup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup('utemPopup')">&times;</span>
+            <h2>Capture Moments</h2>
+            <div class="popup-grid">
+                <div class="popup-card"><img src="education/utem/1.png" alt="UTeM Photo 1"><p>Entrepreneuship</p></div>
+                <div class="popup-card"><img src="education/utem/2.png" alt="UTeM Photo 2"><p>Entrepreneuship</p></div>
+                <div class="popup-card"><img src="education/utem/3.png" alt="UTeM Photo 3"><p>Photo 3</p></div>
+                <div class="popup-card"><img src="education/utem/4.png" alt="UTeM Photo 3"><p>Klebang</p></div>
+                <div class="popup-card"><img src="education/utem/5.png" alt="UTeM Photo 3"><p>Nando's</p></div>
+                <div class="popup-card"><img src="education/utem/6.png" alt="UTeM Photo 3"><p>Shoot Film</p></div>
+                <div class="popup-card"><img src="education/utem/7.png" alt="UTeM Photo 3"><p>Hiking</p></div>
+                <div class="popup-card"><img src="education/utem/8.png" alt="UTeM Photo 3"><p>Hiking</p></div>
+            </div>
         </div>
     </div>
-</div>
-
-
 
     <!-- Skills & Hobbies with Popups -->
     <section id="skills">
@@ -163,8 +162,163 @@
                     <p>Anime</p>
                 </div>
             </div>
+
+            <!-- Skills Progress Bar Section -->
+            <div class="skills-progress">
+                <h3>Technical Proficiency</h3>
+                
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">HTML5</span>
+                        <span class="skill-percentage">60%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-fill" style="width: 60%;"></div>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">CSS3</span>
+                        <span class="skill-percentage">60%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-fill" style="width: 60%;"></div>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">JavaScript</span>
+                        <span class="skill-percentage">60%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-fill" style="width: 60%;"></div>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">Graphic Design</span>
+                        <span class="skill-percentage">80%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-fill" style="width: 80%;"></div>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">Blender / 3D Animation</span>
+                        <span class="skill-percentage">85%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-fill" style="width: 85%;"></div>
+                    </div>
+                </div>
+
+                <div class="skill-item">
+                    <div class="skill-header">
+                        <span class="skill-name">Video Editing</span>
+                        <span class="skill-percentage">85%</span>
+                    </div>
+                    <div class="skill-bar">
+                        <div class="skill-fill" style="width: 85%;"></div>
+                    </div>
+                </div>
+            </div>
         </article>
     </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <article>
+            <h2>University Projects</h2>
+            <div class="projects-grid">
+                <!-- Project Card 1 -->
+                <div class="project-card" onclick="openPopup('project1Popup')">
+                    <img src="projects/p1.png" alt="Project 1">
+                    <h3>Web Development Project</h3>
+                    <p>Created a responsive website using HTML, CSS, JavaScript, and C++ with modern design principles.</p>
+                    <span class="project-tech">HTML • CSS • JavaScript • C++</span>
+                    <button onclick="openPopup('project1Popup')">View Details</button>
+                </div>
+
+                <!-- Project Card 2 -->
+                <div class="project-card" onclick="openPopup('project2Popup')">
+                    <img src="projects/p2.png" alt="Project 2">
+                    <h3>Database Management System</h3>
+                    <p>Designed and implemented a database system for inventory management with SQL.</p>
+                    <span class="project-tech">SQL • Database Design</span>
+                    <button onclick="openPopup('project2Popup')">View Details</button>
+                </div>
+
+                <!-- Project Card 3 -->
+                <div class="project-card" onclick="openPopup('project3Popup')">
+                    <img src="projects/p3.png" alt="Project 3">
+                    <h3>Animation Project</h3>
+                    <p>Created an animated short film using Blender and video editing software.</p>
+                    <span class="project-tech">Blender • Video Editing</span>
+                    <button onclick="openPopup('project3Popup')">View Details</button>
+                </div>
+            </div>
+        </article>
+    </section>
+
+    <!-- Project Popups -->
+    <div id="project1Popup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup('project1Popup')">&times;</span>
+            <h2>Web Development Project</h2>
+            <div class="project-details">
+                <p><strong>Course:</strong> Web Programming</p>
+                <p><strong>Year:</strong> 2024</p>
+                <p><strong>Description:</strong> Built a fully responsive portfolio website featuring modern UI/UX design, interactive elements, and smooth animations. The project demonstrates proficiency in front-end web development.</p>
+                <p><strong>Technologies:</strong> HTML5, CSS3, JavaScript, Responsive Design</p>
+            </div>
+            <div class="popup-grid">
+                <div class="popup-card"><img src="projects/Web/1.png" alt="Screenshot 1"><p>Flying Drone-Lab Test 1</p></div>
+                <div class="popup-card"><img src="projects/web2.png" alt="Screenshot 2"><p>Interactive Features</p></div>
+                <div class="popup-card"><img src="projects/web3.png" alt="Screenshot 3"><p>Mobile Responsive</p></div>
+            </div>
+        </div>
+    </div>
+
+    <div id="project2Popup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup('project2Popup')">&times;</span>
+            <h2>Database Management System</h2>
+            <div class="project-details">
+                <p><strong>Course:</strong> Database Systems</p>
+                <p><strong>Year:</strong> 2024</p>
+                <p><strong>Description:</strong> Developed a comprehensive inventory management system with user authentication, data relationships, and query optimization.</p>
+                <p><strong>Technologies:</strong> MySQL, SQL, Database Design, ERD</p>
+            </div>
+            <div class="popup-grid">
+                <div class="popup-card"><img src="projects/db1.png" alt="Database 1"><p>ERD Diagram</p></div>
+                <div class="popup-card"><img src="projects/db2.png" alt="Database 2"><p>SQL Queries</p></div>
+                <div class="popup-card"><img src="projects/db3.png" alt="Database 3"><p>System Interface</p></div>
+            </div>
+        </div>
+    </div>
+
+    <div id="project3Popup" class="popup">
+        <div class="popup-content">
+            <span class="close" onclick="closePopup('project3Popup')">&times;</span>
+            <h2>Animation Project</h2>
+            <div class="project-details">
+                <p><strong>Course:</strong> Multimedia Design</p>
+                <p><strong>Year:</strong> 2024</p>
+                <p><strong>Description:</strong> Created a 3D animated short film showcasing modeling, rigging, animation, and rendering techniques using Blender.</p>
+                <p><strong>Technologies:</strong> Blender, Video Editing, 3D Modeling</p>
+            </div>
+            <div class="popup-grid">
+                <div class="popup-card"><img src="projects/Blender/1.png" alt="Animation 1"><p>ReLive</p></div>
+                <div class="popup-card"><img src="projects/Blender/2.png" alt="Animation 2"><p>Character ReLive</p></div>
+                <div class="popup-card"><img src="projects/anim3.png" alt="Animation 3"><p>Final Render</p></div>
+            </div>
+        </div>
+    </div>
 
     <!-- Experience Section -->
     <section id="experience">
@@ -181,9 +335,7 @@
         </article>
     </section>
 
-    <!-- Popups -->
-
-    <!-- Coding Popup with Safe Clock -->
+    <!-- Skill Popups -->
     <div id="htmlPopup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closePopup('htmlPopup')">&times;</span>
@@ -196,7 +348,6 @@
         </div>
     </div>
 
-    <!-- Graphic Design Popup -->
     <div id="designPopup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closePopup('designPopup')">&times;</span>
@@ -208,7 +359,6 @@
         </div>
     </div>
 
-    <!-- Gaming Popup -->
     <div id="gamingPopup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closePopup('gamingPopup')">&times;</span>
@@ -224,7 +374,6 @@
         </div>
     </div>
 
-    <!-- Streaming Popup -->
     <div id="streamPopup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closePopup('streamPopup')">&times;</span>
@@ -237,7 +386,6 @@
         </div>
     </div>
 
-    <!-- Animation Popup -->
     <div id="animationPopup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closePopup('animationPopup')">&times;</span>
@@ -252,7 +400,6 @@
         </div>
     </div>
 
-    <!-- Anime Popup -->
     <div id="animePopup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closePopup('animePopup')">&times;</span>
@@ -265,7 +412,6 @@
         </div>
     </div>
 
-    <!-- Minecraft Server Popup -->
     <div id="mcServerPopup" class="popup">
         <div class="popup-content">
             <span class="close" onclick="closePopup('mcServerPopup')">&times;</span>
@@ -287,11 +433,14 @@
                     <img src="server/maintanence.png" alt="Server">
                     <p>Server Maintenance</p>
                 </div>
+                <div class="popup-card">
+                    <img src="server/error.png" alt="Server">
+                    <p>Fixing Error</p>
+                </div>
             </div>
         </div>
     </div>
 
-    <!-- Secondary Big Image Popup -->
     <div id="bigImagePopup" class="popup">
         <span class="close" onclick="closePopup('bigImagePopup')">&times;</span>
         <img id="bigImage" src="" alt="Big Image" style="max-width:90%; max-height:90%; border-radius:10px; display:block; margin:auto;">
@@ -344,14 +493,12 @@
     <footer>
         <p>Connect with me: 
             <a href="https://www.instagram.com/senseinsem" target="_blank">Instagram</a> | 
-            <a href="https://www.tiktok.com/@senseinsem" target="_blank">TikTok</a>
+            <a href="https://www.tiktok.com/@senseinsem" target="_blank">TikTok</a> |
+            <a href="https://discord.gg/hzGdXXtx" target="_blank">Discord</a>
         </p>
         <p>&copy; 2025 SENSEI</p>
     </footer>
 
-    <!-- Scripts -->
     <script src="script.js"></script>
 </body>
 </html>
-
-
